--- a/src/Resource/views/auth/loginClient.ejs
+++ b/src/Resource/views/auth/loginClient.ejs
@@ -83,9 +83,9 @@
                                             <button class="btn btn-lg btn-primary btn-gradient w-100" type="submit" >Đăng nhập</button>
                                         </div>
                                         <div class="d-flex justify-content-between flex-wrap gap-2">
-                                            <!-- <div class="link font-sm">
-                                                <a href="forgot-password.html" title="Forgot Password">Tôi quên mật khẩu</a>
-                                            </div> -->
+                                            <div class="link font-sm">
+                                                <a href="/ForgotPassword" title="Forgot Password">Tôi quên mật khẩu</a>
+                                            </div>
                                             <div class="link font-sm">
                                                 Tôi không có mật khẩu ?<a href="/FormRegister" title="Go Signup" target="_self"> Bấm ở đây</a> dến đăng ký
                                             </div>
