CRUD Account-Admin

--- a/src/Resource/views/admin/layout/sidebar.ejs
+++ b/src/Resource/views/admin/layout/sidebar.ejs
@@ -72,9 +72,6 @@
                             <a href="javascript:;" class="side-menu__link side-menu__link--active">
                                 <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
                                 <div class="side-menu__link__title">Thông kê</div>
-                                <div class="side-menu__link__badge">
-                                   1
-                                </div>
                                 <i data-lucide="chevron-down" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__chevron transition"></i>
                             </a>
                             <!-- BEGIN: Second Child -->
@@ -113,7 +110,7 @@
                                     <!-- BEGIN: Third Child -->
                                     <ul class="hidden">
                                         <li>
-                                            <a href="enigma-side-menu-product-list.html" class="side-menu__link ">
+                                            <a href="/admin/AccountUser" class="side-menu__link ">
                                                 <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
                                                 <div class="side-menu__link__title">
                                                     Người dùng
@@ -121,7 +118,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="enigma-side-menu-product-grid.html" class="side-menu__link ">
+                                            <a href="/admin/AccountBusiness" class="side-menu__link ">
                                                 <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
                                                 <div class="side-menu__link__title">
                                                     Người Bán
@@ -135,7 +132,7 @@
                                     <a href="javascript:;" class="side-menu__link ">
                                         <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
                                         <div class="side-menu__link__title">
-                                            Transactions
+                                            Bài đăng
                                         </div>
                                         <i data-lucide="chevron-down" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__chevron transition"></i>
                                     </a>
@@ -145,15 +142,7 @@
                                             <a href="enigma-side-menu-transaction-list.html" class="side-menu__link ">
                                                 <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
                                                 <div class="side-menu__link__title">
-                                                    Transaction List
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="enigma-side-menu-transaction-detail.html" class="side-menu__link ">
-                                                <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
-                                                <div class="side-menu__link__title">
-                                                    Transaction Detail
+                                                    Danh sách bài đăng
                                                 </div>
                                             </a>
                                         </li>
