--- a/src/Resource/views/admin/layout/sidebar.ejs
+++ b/src/Resource/views/admin/layout/sidebar.ejs
@@ -113,7 +113,7 @@
                                             <a href="/admin/AccountUser" class="side-menu__link ">
                                                 <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
                                                 <div class="side-menu__link__title">
-                                                    Người dùng
+                                                    Quản trị viên
                                                 </div>
                                             </a>
                                         </li>
@@ -121,7 +121,7 @@
                                             <a href="/admin/AccountBusiness" class="side-menu__link ">
                                                 <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
                                                 <div class="side-menu__link__title">
-                                                    Người Bán
+                                                    Người dùng
                                                 </div>
                                             </a>
                                         </li>
