--- a/src/Resource/views/auth/ResetPassword.ejs
+++ b/src/Resource/views/auth/ResetPassword.ejs
@@ -44,7 +44,7 @@
                                                 <div class="form-group mb-20">
                                                     <label for="userName2" class="form-label color-dark">Thay đổi mật khẩu<span class="color-red">*</span></label>
                                                     <div class="position-relative"></div>
-                                                         <input type="text" name="resetPassword" id="resetPassword" class="form-control" placeholder="mật khẩu mới">
+                                                         <input type="text" name="resetPassword" id="resetPassword" class="form-control" placeholder="Nhập mật khẩu mới">
                                                     </div>
                                                     <p id="notificationtoken">
 
@@ -53,7 +53,7 @@
                                             </div>                                            
                                         </div>
                                         <div class="text-center mt-10 mb-15">
-                                            <button class="btn btn-lg btn-primary btn-gradient w-100" type="submit" aria-label="Login">Thay đổi mật khẩu</button>
+                                            <button class="btn btn-lg btn-primary btn-gradient w-75" type="submit" aria-label="Login">Thay đổi mật khẩu</button>
                                         </div>
                                         <div class="link font-sm">
                                                 Tôi Đã có tài khoản<a href="/FormLogin" title="Go Signup" target="_self"> Bấm ở đây</a> đến đăng nhập
