--- a/src/Resource/views/client/index.ejs
+++ b/src/Resource/views/client/index.ejs
@@ -59,7 +59,7 @@
                     </div>
                     <div class="col-lg-6" data-aos="fade-up">
                         <div class="banner-image mb-40 parallax-img" data-speed="0.5" data-revert="true">
-                            <img class="lazyload blur-up" src="assets/images/banner/" alt="Banner Image">
+                            <img class="lazyload blur-up" src="/clients/assets/images/banner/assets/images/logo/logo-1.png" alt="Banner Image">
                         </div>
                     </div>
                 </div>
