CRUD POst , no validate

--- a/src/Resource/views/admin/layout/sidebar.ejs
+++ b/src/Resource/views/admin/layout/sidebar.ejs
@@ -1,10 +1,10 @@
  <div class="side-menu__content z-20 relative w-[320px] duration-200 transition-[width] group-[.side-menu--collapsed]:xl:w-[165px] group-[.side-menu--collapsed.side-menu--on-hover]:xl:w-[320px] h-screen flex flex-col-reverse xl:flex-col before:absolute before:inset-y-0 before:w-px before:mt-23 before:bg-foreground/[.11] dark:before:bg-foreground/10 before:right-0 before:mr-8 before:hidden xl:before:block">
                 <div class="relative z-10 mt-3 hidden h-[90px] w-[320px] flex-none items-center overflow-hidden pl-8 pr-14 duration-200 xl:flex group-[.side-menu--collapsed.side-menu--on-hover]:xl:w-[320px] group-[.side-menu--collapsed]:xl:w-[165px]">
                     <a class="relative flex items-center transition-[margin] duration-200 xl:ml-1.5 group-[.side-menu--collapsed.side-menu--on-hover]:xl:ml-1.5 group-[.side-menu--collapsed]:xl:ml-8" href="#">
-                        <img class="size-5" src="/clients/dist/images/logo.svg">
+                        <img class="size-5" src="/admin/dist/images/fav.png">
                         <div class="dark:text-foreground text-background ml-3.5 text-nowrap transition-opacity group-[.side-menu--collapsed.side-menu--on-hover]:xl:opacity-100 group-[.side-menu--collapsed]:xl:opacity-0">
-                            <span class="text-base font-medium">Midone</span>
-                            <span class="text-base font-light">Enigma</span>
+                            <span class="text-base font-medium">Book-</span>
+                            <span class="text-base font-light">App</span>
                         </div>
                     </a>
                     <a class="toggle-compact-menu text-background dark:text-foreground border-background/20 bg-background/10 dark:bg-foreground/[.02] dark:border-foreground/[.11] relative ml-auto hidden items-center justify-center rounded-md border py-0.5 pl-0.5 pr-1 opacity-70 transition-[opacity,transform] hover:opacity-100 group-[.side-menu--collapsed]:xl:rotate-180 group-[.side-menu--collapsed.side-menu--on-hover]:xl:opacity-100 group-[.side-menu--collapsed]:xl:opacity-0 2xl:flex" href="#">
@@ -153,25 +153,25 @@
                                     <a href="javascript:;" class="side-menu__link ">
                                         <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
                                         <div class="side-menu__link__title">
-                                            Sellers
+                                           Bài báo
                                         </div>
                                         <i data-lucide="chevron-down" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__chevron transition"></i>
                                     </a>
                                     <!-- BEGIN: Third Child -->
                                     <ul class="hidden">
                                         <li>
-                                            <a href="enigma-side-menu-seller-list.html" class="side-menu__link ">
+                                            <a href="/admin/ListPost" class="side-menu__link ">
                                                 <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
                                                 <div class="side-menu__link__title">
-                                                    Seller List
+                                                    Danh sách bài đăng
                                                 </div>
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="enigma-side-menu-seller-detail.html" class="side-menu__link ">
+                                            <a href="/admin/FormAddPost" class="side-menu__link ">
                                                 <i data-lucide="circle-gauge" class="size-4 stroke-[1.5] [--color:currentColor] stroke-(--color) fill-(--color)/25 side-menu__link__icon"></i>
                                                 <div class="side-menu__link__title">
-                                                    Seller Detail
+                                                    Thêm bài đăng
                                                 </div>
                                             </a>
                                         </li>
