--- a/src/Resource/views/admin/layout/head.ejs
+++ b/src/Resource/views/admin/layout/head.ejs
@@ -22,12 +22,13 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="https://fonts.googleapis.com/" rel="preconnect">
     <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap" rel="stylesheet">
-    <title>Dashboard - Midone - Tailwind Admin Dashboard Template</title>
+    <title>Book-app</title>
     <!-- BEGIN: CSS Assets-->
     <link rel="stylesheet" href="/admin/dist/css/vendors/vector-map.css">
     <link rel="stylesheet" href="/admin/dist/css/vendors/tiny-slider.css">
     <link rel="stylesheet" href="/admin/dist/css/themes/enigma/side-menu.css">
     <link rel="stylesheet" href="/admin/dist/css/vendors/simplebar.css">
     <link rel="stylesheet" href="/admin/dist/css/app.css"> <!-- END: CSS Assets-->
+    <script src="https://cdn.ckeditor.com/ckeditor5/41.2.1/classic/ckeditor.js"></script>
 </head>
 <!-- END: Head -->
