CRUD Category, no validate

--- a/src/Resource/views/client/layout/header.ejs
+++ b/src/Resource/views/client/layout/header.ejs
@@ -24,7 +24,6 @@
                 </a>
             </div>
 
-
             <!-- Menu toggle button -->
             <button class="menu-toggler" type="button">
                 <span></span>
@@ -45,18 +44,7 @@
                 <div class="collapse navbar-collapse">
                     <ul id="mainMenu" class="navbar-nav mobile-item mx-auto">
                         <li class="nav-item">
-                            <a href="#home" class="nav-link toggle">Home <i class="fal fa-plus"></i></a>
-                            <ul class="menu-dropdown">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home Demo 1</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="index-2.html">Home Demo 2</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="index-3.html">Home Demo 3</a>
-                                </li>
-                            </ul>
+                            <a href="/" class="nav-link toggle">Home <i class="fal fa-plus"></i></a>                            
                         </li>
                         <li class="nav-item">
                             <a class="nav-link toggle" href="#services">Services<i class="fal fa-plus"></i></a>
